[tool.poetry]
name = "battleship"
version = "0.1.0"
description = ""
authors = ["Elizabeth Ward <catz07@rocketmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
